0.57.5.0/_sources/Reference/NodeReference/GafferVDB/MeshToLevelSet.md.txt
MeshToLevelSet
==============

Converts a mesh primitive to a level set VDB object.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

filter
------

The filter used to control which parts of the scene are
processed. A Filter node should be connected here.

grid
----

Name of the level set grid to create in the VDB object.

voxelSize
---------

Size of the voxel in the level set grid. Smaller voxel sizes will increase resolution, take more memory & longer to process. 

exteriorBandwidth
-----------------

Defines the exterior width of the level set in voxel units. 

interiorBandwidth
-----------------

Defines the interior width of the level set in voxel units.