1.6.2.0/_sources/Reference/NodeReference/GafferVDB/MeshToLevelSet.md.txt
MeshToLevelSet
==============

Converts a mesh primitive to a level set VDB object.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

filter
------

The filter used to choose the meshes to be converted. Source locations are
pruned from the output scene, unless they are reused as part of a destination location
(or a separate source scene is connected).

source
------

An optional alternate scene to provide the meshes to be converted. When connected :

- The `filter` chooses locations to be merged from the `source` scene rather than then `in` scene.
- Source locations are not pruned from the output scene.

destination
-----------

By default, meshes will be replaced with a level set in place, using the destination `${scene:path}`.
The destination can be modified to change where the outputs are placed. If multiple filtered locations
have the same destination, the meshes will be merged into one level set.

The destination location will be created if it doesn't exist already. If the name overlaps
with an existing location that isn't filtered, the name will get a suffix.

grid
----

Name of the level set grid to create in the VDB object.

voxelSize
---------

Size of the voxel in the level set grid. Smaller voxel sizes will increase resolution, take more memory & longer to process.

exteriorBandwidth
-----------------

Defines the exterior width of the level set in voxel units.

interiorBandwidth
-----------------

Defines the interior width of the level set in voxel units.